log
ju., 17 de abr. de 2025 19:17:39: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:55:38: error: expected expression before 'size_t'
     HashMap* mapa = (HashMap*)malloc(size_t(HashMap));
                                      ^~~~~~
hashmap.c:57:5: error: expected ';' before 'return'
     return NULL;
     ^~~~~~
hashmap.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
eeef3b7
ju., 17 de abr. de 2025 19:17:53: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
943250f
ju., 17 de abr. de 2025 19:20:34: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
4134116
vi., 18 de abr. de 2025 22:53:53: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
e03fd72
